--- a/springboot/HomeCarOwnership/pom.xml
+++ b/springboot/HomeCarOwnership/pom.xml
@@ -49,6 +49,10 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
