--- a/springboot/HomeCarOwnership/pom.xml
+++ b/springboot/HomeCarOwnership/pom.xml
@@ -54,6 +54,11 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
